--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Potlucky is a platform for organizing who-brings-what to events with food.
 
-Things you may want to cover:
+Check out the app at jaustin-potlucky.herokuapp.com
 
-* Ruby version
+Ruby v 2.1.2
+Rails v 4.1.1
+Configure with rake db:setup (seed data coming soon)
 
-* System dependencies
+Contributing: (I'm flattered!) Fork and clone, submit pull request, and become the best of friends! I put this together relatively quickly so there are a lot of small (and a few big) improvements to be made, and I will be refactoring periodically when I find the time.
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
